--- a/index.html
+++ b/index.html
@@ -96,6 +96,75 @@
         </div>
     </section>
     <!-- end of mission -->
+    <!-- collection -->
+
+    <section class="p-5" style="background-color: #6C757D;">
+
+        <div class="container-fluid">
+            <div class="row text-light text-center">
+                <div class="col m-4">
+                    <h1 class="display-4 mb-4">Our Collection</h1>
+                    <div class="underline mb-4"></div>
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium inventore, sint quisquam fugiat pariatur culpa officia. Eveniet omnis quia tempora.</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-4 col-sm-6 my-5">
+                    <div class="card border card-shadow">
+                        <img src="images/nature.jpeg" class="card-img" alt="">
+                        <div class="card-img-overlay">
+                            <h5 class="text-light text-uppercase font-weight-bold p-2 heading">Nature Photography</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 my-5">
+                    <div class="card border card-shadow">
+                        <img src="images/wedding.jpeg" class="card-img" alt="">
+                        <div class="card-img-overlay">
+                            <h5 class="text-light text-uppercase font-weight-bold p-2 heading">Wedding Photography</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 my-5">
+                    <div class="card border card-shadow">
+                        <img src="images/party.jpeg" class="card-img" alt="">
+                        <div class="card-img-overlay">
+                            <h5 class="text-light text-uppercase font-weight-bold p-2 heading">party Photography</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 my-5">
+                    <div class="card border card-shadow">
+                        <img src="images/business.jpeg" class="card-img" alt="">
+                        <div class="card-img-overlay">
+                            <h5 class="text-light text-uppercase font-weight-bold p-2 heading">business Photography</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 my-5">
+                    <div class="card border card-shadow">
+                        <img src="images/fashion.jpeg" class="card-img" alt="">
+                        <div class="card-img-overlay">
+                            <h5 class="text-light text-uppercase font-weight-bold p-2 heading">fashion Photography</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 my-5">
+                    <div class="card border card-shadow">
+                        <img src="images/family.jpeg" class="card-img" alt="">
+                        <div class="card-img-overlay">
+                            <h5 class="text-light text-uppercase font-weight-bold p-2 heading">family Photography</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+
+    <!-- end of collection -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
