--- a/index.html
+++ b/index.html
@@ -160,12 +160,70 @@
                 </div>
             </div>
         </div>
+    </section>
+    <!-- end of collection -->
+
+    <!-- gallery -->
+
+    <section class="py-5">
+        <div class="container-fluid">
+            <div class="row text-muted text-center">
+                <div class="col m-4">
+                    <h1 class="display-4 mb-4">Gallery</h1>
+                    <div class="underline mb-4"></div>
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium inventore, sint quisquam fugiat pariatur culpa officia. Eveniet omnis quia tempora.</p>
+                </div>
+            </div>
+
+            <ul class="list-inline text-center text-uppercase font-weight-bold my-4">
+                <li class="list-inline-item gallery-list-item active-item" data-filter="all">All <span class="mx-md-5 mx-3 text-muted ">/</span></li>
+                <li class="list-inline-item gallery-list-item" data-filter="new">New <span class="mx-md-5 mx-3 text-muted">/</span></li>
+                <li class="list-inline-item gallery-list-item" data-filter="free">Free <span class="mx-md-5 mx-3 text-muted">/</span></li>
+                <li class="list-inline-item gallery-list-item" data-filter="pro">Pro</li>
+            </ul>
+
+            <div class="container-fluid">
+                <div class="d-flex flex-wrap justify-content-center">
+                    <div class="filter new"><img src="images/img1.jpeg" width="300"></div>
+                    <div class="filter free"><img src="images/img2.jpeg" width="300"></div>
+                    <div class="filter pro"><img src="images/img3.jpeg" width="300"></div>
+                    <div class="filter new"><img src="images/img4.jpeg" width="300"></div>
+                    <div class="filter pro"><img src="images/img5.jpeg" width="300"></div>
+                    <div class="filter free"><img src="images/img6.jpeg" width="300"></div>
+                    <div class="filter pro"><img src="images/img7.jpeg" width="300"></div>
+                    <div class="filter free"><img src="images/img8.jpeg" width="300"></div>
+                    <div class="filter new"><img src="images/img9.jpeg" width="300"></div>
+                    <div class="filter pro"><img src="images/img10.jpeg" width="300"></div>
+                    <div class="filter free"><img src="images/img11.jpeg" width="300"></div>
+                    <div class="filter pro"><img src="images/img12.jpeg" width="300"></div>
+                    <div class="filter new"><img src="images/img13.jpeg" width="300"></div>
+                    <div class="filter free"><img src="images/img14.jpeg" width="300"></div>
+                    <div class="filter new"><img src="images/img15.jpeg" width="300"></div>
+                    <div class="filter pro"><img src="images/img16.jpeg" width="300"></div>
+                </div>
+            </div>
+        </div>
 
     </section>
+    <!-- end of gallery -->
 
 
-    <!-- end of collection -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <!-- customers -->
+    <section class="p-5" style="background: #151F20;">
+        <div class="container-fluid">
+            <div class="row text-light text-center">
+                <div class="col m-4">
+                    <h1 class="display-4 mb-4">Happy Customers</h1>
+                    <div class="underline mb-4"></div>
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium inventore, sint quisquam fugiat pariatur culpa officia. Eveniet omnis quia tempora.</p>
+                </div>
+            </div>
+            <div class="row"></div>
+        </div>
+
+    </section>
+    <!-- end of customers -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <script src="script.js"></script>
